--- a/generator-mediator-java/app/templates/_mediator.properties
+++ b/generator-mediator-java/app/templates/_mediator.properties
@@ -1,11 +1,11 @@
 # Mediator Properties
-mediator.name=<%= appName %>
+mediator.name=javaMediator
 mediator.host=localhost
-mediator.port=<%= configPort %>
+mediator.port=6010
 mediator.timeout=60000
 mediator.heartbeats=true
 
 core.host=localhost
-core.api.port=8080
+core.api.port=8888
 core.api.user=root@openhim.org
-core.api.password=openhim-password
+core.api.password=wXV8xSW2Ju5X3EPn
